@@ -1,3 +1,10 @@
+2008-04-11  Alexey Shchepin  <alexey@process-one.net>
+
+	* src/tls/tls_drv.c: Fixed gcc signedness warnings (EJAB-447)
+	* src/ejabberd_zlib/ejabberd_zlib_drv.c: Likewise
+
+	* src/expat_erl.c: Removed R9B workaround (EJAB-447)
+
 2008-04-10  Christophe Romain <christophe.romain@process-one.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: fix identity and database update
